# anything-ai-system

./: .gitignore  pyproject.toml
emotion_analysis/: Dockerfile.main  Dockerfile.monitor  deploy.sh  main.py  monitor.py  pyproject.toml
emotion_analysis/app/routes/: ea_monitor.py  ea_prediction.py
emotion_analysis/common/: constants.py
emotion_analysis/data/: ea_data_cleaning.py  ea_data_profiling.py  ea_data_visualization.py  em_corpus_profiling.py  em_corpus_visualization.py  em_feast.py  em_tabular_data_cleaning.py  em_tabular_data_profiling.py  em_tabular_data_visualization.py  em_text_data_cleaning.py
emotion_analysis/data/helpers/: ea_profiling_helper.py  text_data_cleaning_helper.py
emotion_analysis/data/models/: ea_report_inputs_model.py
emotion_analysis/models/: ea_data_preparation.py  ea_model_evaluation.py  ea_model_training.py  ea_model_validation.py  test.py
emotion_analysis/models/helpers/: ea_model_validation_helper.py
emotion_analysis/pipelines/: ea_etl_dag.py  ea_materialize_dag.py  ea_stream_dag.py
emotion_analysis/pipelines/configs/: ea_dag_build_configs.py
emotion_analysis/pipelines/data_pipelines/: Dockerfile  deploy.sh  ea_etl_dag.py  ea_materialize_dag.py  ea_stream_dag.py  requirements.txt
emotion_analysis/pipelines/training_pipelines/: Dockerfile  deploy.sh  ea_training_dag.py
pipelines/: pyproject.toml
pipelines/src/data_pipeline/: __init__.py
shared/: pyproject.toml
shared/src/common/: env_constants.py  models.py
shared/src/data/: corpus_profiling_base.py  corpus_visualization_base.py  feast_base.py  tabular_data_cleaning_base.py  tabular_data_profiling_base.py  tabular_data_visualization_base.py  text_data_cleaning_base.py
shared/src/data/helpers/: aws_s3_helper.py  tabular_data_helper.py  text_data_helper.py
shared/src/data/interfaces/: i_corpus_profiling.py  i_corpus_visualization.py  i_data_ingestion.py  i_feast.py  i_tabular_data_cleaning.py  i_tabular_data_profiling.py  i_tabular_data_visualization.py  i_text_data_cleaning.py
shared/src/models/: tabular_data_preparation_base.py
shared/src/pipeline/: dag_base.py  etl_dag_base.py  materialize_dag_base.py  model_training_dag_base.py  stream_dag_base.py
(+34 files in other folders)
