[project]
name = "pipelines"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ThuyVan032004", email = "dovan032004@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
pipelines = "pipelines:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
